download file button added

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
                   <th>Owner</th>
                   <th>Last Modified</th>
                   <th>File Size</th>
+                  <th>Download</th>
               </tr>
             </thead>
   
